--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   width: 451px;
-	margin: 0 auto;
+  margin: 0 auto;
 
   background-color: #fff;
   border-radius: 10px;
@@ -55,22 +55,22 @@
 }
 
 .description {
-	max-width: 239px;
-	max-height: 129px;
+  max-width: 239px;
+  max-height: 129px;
   margin: 10px 0;
   line-height: 22px;
   font-size: 12px;
   color: #444;
-	overflow: hidden;
-	display: -webkit-box;
-	-webkit-box-orient: vertical;
-	text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 
 .stars {
-	display: flex;
+  display: flex;
   margin-top: auto;
-	margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .stars > * {
@@ -93,4 +93,21 @@
   position: absolute;
   top: 6px;
   left: 4.5px;
+}
+
+@media (max-width: 880px) {
+  .card {
+    height: 245px;
+  }
+}
+
+@media (max-width: 460px) {
+  .poster {
+    margin-right: auto;
+    float: right;
+    margin-left: 10px;
+    margin-top: 6px;
+    max-width: 60px;
+    height: 90px;
+  }
 }
