--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,11 @@ h6 {
   margin-top: 150px;
 }
 
+.loadingSpin {
+  display: 'flex';
+  justify-content: 'center';
+}
+
 @media (max-width: 880px) {
   .container {
     padding: 6px 10px 0 10px;
